--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -3,7 +3,7 @@
 .hero {
   height: calc(100vh - 100px);
   overflow: hidden;
-  background: linear-gradient(180deg, #0c0c1d, #111132);
+  background-image: url('/herobg.png');
   position: relative;
 
   .wrapper {
@@ -29,11 +29,12 @@
 
       h2 {
         font-size: 30px;
-        color: rebeccapurple;
+        color: #233d4d;
         letter-spacing: 10px;
       }
 
       h1 {
+        color: #233d4d;
         font-size: 88px;
 
         @include mobile {
@@ -44,10 +45,10 @@
       .buttons {
         button {
           padding: 20px;
-          border: 1px solid white;
+          border: 1px solid rgb(0, 0, 0);
           border-radius: 10px;
           background-color: transparent;
-          color: white;
+          color: rgb(0, 0, 0);
           margin-right: 20px;
           cursor: pointer;
           font-weight: 300;
@@ -59,7 +60,13 @@
       }
     }
   }
-
+  .youtube-video {
+    width: 50%; // Each video takes 50% of the container width
+    float: left; // Float the videos to the left
+    padding: 0 10px; // Add some padding to create space between the videos
+    box-sizing: border-box; // Include padding in the width calculation
+  }
+  
   .imageContainer {
     height: 100%;
     position: absolute;
@@ -85,7 +92,7 @@
     font-size: 50vh;
     bottom: -120px;
     white-space: nowrap;
-    color: #ffffff09;
+    color: #00000009;
     width: 50%;
     font-weight: bold;
   }
