--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -11,7 +11,7 @@
 
   h1 {
     font-size: 100px;
-
+    
     @include mobile {
       font-size: 72px;
       text-align: center;
@@ -19,7 +19,7 @@
   }
 
   .mountains {
-    background-image: url("/mountains.png");
+    background-image: url("/BG1.png");
     background-size: cover;
     background-position: bottom;
     width: 100%;
