--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,7 +2,8 @@
 
 .navbar {
   height: 100px;
-
+  background-color: white;
+  
   .wrapper {
     max-width: 1366px;
     margin: auto;
@@ -18,6 +19,7 @@
 
     span {
       font-weight: bold;
+      color: black;
 
       @include mobile {
         display: none;
