--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -11,7 +11,7 @@
 
   h1 {
     font-size: 100px;
-    
+    margin-top: -500px;
     @include mobile {
       font-size: 72px;
       text-align: center;
